--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
             <artifactId>javafx-controls</artifactId>
             <version>14</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>15-ea+5</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
