--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -38,6 +38,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>sharif.ap</groupId>
+            <artifactId>group26</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
