--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -168,6 +168,12 @@
             <version>1.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.7</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
