--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
             <version>14</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
         <!--        <dependency>-->
         <!--            <groupId>org.hibernate</groupId>-->
         <!--            <artifactId>hibernate-entitymanager</artifactId>-->
