now we have module-info.java

--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -50,6 +50,21 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!-- <dependency>
+             <groupId>org.apache.httpcomponents</groupId>
+             <artifactId>httpclient</artifactId>
+             <version>4.5.2</version>
+         </dependency>-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.1.1</version>
+        </dependency>
         <dependency>
             <groupId>sharif.ap</groupId>
             <artifactId>group26</artifactId>
