--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -86,6 +86,12 @@
             <version>1.6</version>
             <type>jar</type>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
     </dependencies>
 
 
