--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -57,6 +57,12 @@
             <version>1.14</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
