--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -45,6 +45,16 @@
             <artifactId>spring-messaging</artifactId>
             <version>5.2.7.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.8</version>
+        </dependency>
 
         <dependency>
             <groupId>net.minidev</groupId>
