--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-# The format used for the keystore. It could be set to JKS in case it is a JKS file
-server.ssl.key-store-type=PKCS12
-# The path to the keystore containing the certificate
-server.ssl.key-store=classpath:keystore/keystore.p12
-# The password used to generate the certificate
-server.ssl.key-store-password=H589QkHFIdafh6@*yuydfjh879yfdWWMjHUyoih&jnawi0asd23Yzq
-# The alias mapped to the certificate
-server.ssl.key-alias=store
-server.ssl.enabled=true
+## The format used for the keystore. It could be set to JKS in case it is a JKS file
+#server.ssl.key-store-type=PKCS12
+## The path to the keystore containing the certificate
+#server.ssl.key-store=classpath:keystore/keystore.p12
+## The password used to generate the certificate
+#server.ssl.key-store-password=H589QkHFIdafh6@*yuydfjh879yfdWWMjHUyoih&jnawi0asd23Yzq
+## The alias mapped to the certificate
+#server.ssl.key-alias=store
+#server.ssl.enabled=true
 server.port=8083
